# docs/swagger.yaml
@@ -43,7 +43,17 @@ paths:
             items:
               $ref: '#/definitions/models.Person'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: List all people
+      tags:
+      - People
     post:
       consumes:
       - application/json
@@ -62,10 +72,16 @@ paths:
           schema:
             type: string
         "400":
-          description: Invalid
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
           schema:
             type: string
       summary: Add a new person
+      tags:
+      - People
   /people/{id}:
     delete:
       parameters:
@@ -79,7 +95,17 @@ paths:
           description: No Content
           schema:
             type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Delete person by ID
+      tags:
+      - People
     get:
       parameters:
       - description: Person ID
@@ -92,11 +118,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Person'
-        "404":
-          description: Not Found
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
           schema:
             type: string
       summary: Get person by ID
+      tags:
+      - People
     patch:
       consumes:
       - application/json
@@ -117,7 +149,48 @@ paths:
           description: OK
           schema:
             type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Update person fields
+      tags:
+      - People
+  /people/age:
+    get:
+      parameters:
+      - description: Minimum age
+        in: query
+        name: min
+        required: true
+        type: integer
+      - description: Maximum age
+        in: query
+        name: max
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Person'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get people by age range
+      tags:
+      - People
   /people/recent:
     get:
       parameters:
@@ -132,6 +205,14 @@ paths:
             items:
               $ref: '#/definitions/models.Person'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Get recent people
       tags:
       - People
@@ -150,7 +231,17 @@ paths:
             items:
               $ref: '#/definitions/models.Person'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Search people by name
+      tags:
+      - People
   /people/stats:
     get:
       responses:
@@ -160,5 +251,15 @@ paths:
             additionalProperties:
               type: integer
             type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       summary: Get total number of people
+      tags:
+      - People
 swagger: "2.0"
